# candidengine

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
apps/sandbox/: CMakeLists.txt
apps/sandbox/src/: main.c
cmake/: CompilerWarnings.cmake
include/: renderer.h
libs/renderer/src/: renderer.c  renderer_metal.m
renderer/: CMakeLists.txt
renderer/include/candid/: backend.h  material.h  mesh.h  renderer.h  shader.h  types.h
renderer/shaders/: standard.hlsl
renderer/src/: backend.c  backend_metal.m  backend_vulkan.c  mesh.c  renderer.c  renderer_metal.m
src/: main.c  renderer.c
